--- a/web_static/styles/4-footer.css
+++ b/web_static/styles/4-footer.css
@@ -5,5 +5,6 @@ footer{
     height: 60px;
     text-align: center;
     line-height: 60px;
-    background-color: #00ff00;
+    background-color: white;
+    border-top:1px solid #CCCCCC ;
 }
