--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -5,7 +5,7 @@
     border: 1px solid #DDDDDD;
     border-radius: 4px;
     display: flex;
-    justify-content: end;
+    justify-content: space-between;
     align-items: center;
 }
 .filters button{
@@ -27,4 +27,35 @@
     opacity: 90%;
     border: 1px #FF5A5F solid;
     cursor: pointer;
+}
+
+.filters .filter_options{
+    width: 25%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.filter_options h3{
+    margin: 0px;
+    padding: 0px;
+    font-weight: 600;
+}
+.filter_options h4{
+    margin: 0;
+    padding: 0;
+    font-weight: 400;
+    font-size: 14px;
+}
+
+.locations{
+    border-right: 1px #DDDDDD solid;
+    margin-left: 40px; 
+}
+
+.amenities{
+    margin-right: auto;
+    margin-left: 20px;
 }
