--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -32,10 +32,12 @@
 .filters .filter_options{
     width: 25%;
     height: 100%;
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
+    margin-left:45px;
 }
 
 .filter_options h3{
@@ -52,10 +54,50 @@
 
 .locations{
     border-right: 1px #DDDDDD solid;
-    margin-left: 45px; 
 }
 
 .amenities{
     margin-right: auto;
-    margin-left: 45px;
+}
+.popover{
+    list-style: none;
+    margin: 0;
+    width: 100%;
+    position: absolute;
+    top:100%;
+    display: none;
+    flex-direction: column;
+    background-color: #FAFAFA;
+    border: 1px solid  #DDDDDD;
+    border-radius: 4px;
+    z-index: 22;
+}
+li{
+    display: flex;
+    flex-direction: column;
+}
+span{
+    padding-left: 20px;
+    padding-block: 5px;
+}
+.amenities .popover{
+    justify-content: center;
+    align-items: flex-start;
+    padding-block: 40px;
+    right: 2%;
+    transition: all 200ms ease;
+}
+.locations .popover{
+
+    justify-content: center;
+    padding: 22px;
+    right: 0%;
+    transition: all 200ms ease;
+}
+.locations .popover h2{
+    margin: 8px;
+}
+
+.locations:hover , .popover{
+    display: flex;
 }
