--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -39,6 +39,9 @@
     align-items: flex-start;
     margin-left:45px;
 }
+.filter_options:hover{
+    cursor: pointer;
+}
 
 .filter_options h3{
     margin: 0px;
